# google-photos-to-apple

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md  google-photos-to-apple.plugin  google_photos_to_apple.py  pyproject.toml
