[project]
name = "google-photos-to-apple"
version = "1.0.0"
description = "Transfer Google Photos Takeout to Apple Photos with full metadata restoration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.scripts]
google-photos-to-apple = "google_photos_to_apple:main"
